# milvus_rag

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
milvus_project/: __init__.py  config copy.py  config.py  models.py
milvus_project/api/: __init__.py  ask.py  search.py  upload.py
milvus_project/core/: __init__.py  embedding.py  llm.py  milvus_client.py  rerank.py
milvus_project/utils/: __init__.py  chunker.py  file_reader.py  logger.py
